Add UC 1-7 Unified Search with DBMS_SEARCH.FIND algorithm
Implements a new unified search algorithm for UC 1-7 queries using Oracle
DBMS_SEARCH (Ubiquitous Database Search) with fuzzy OR queries across a
unified index spanning all collections.

Key changes:
- Add SearchHit record for parsing DBMS_SEARCH.FIND JSON responses
- Add SearchCategory enum defining required categories for each UC case
- Add CustomerHitGroup class for aggregating hits by customer
- Refactor UcSearchService with searchUnifiedUC1-7 methods using new algorithm
- Add buildFuzzyOrQuery method for generating fuzzy OR queries
- Add UnifiedSearchAlgorithmTest with 40+ tests for algorithm logic
- Add UcSearchIntegrationTest for live database testing
- Update README with UC Unified Search documentation
- Update HybridSearchCommand with --uc-search-benchmark option

Algorithm:
1. Execute DBMS_SEARCH.FIND with fuzzy OR query across unified index
2. Parse JSON response into SearchHit records (source_table, customerNumber, score)
3. Group hits by customerNumber into CustomerHitGroup
4. Map matched fields to SearchCategory (PHONE, SSN_LAST4, etc.)
5. Filter groups having ALL required categories for UC case
6. Sort by average score, limit results
7. Fetch customer details from identity/address collections

278 tests passing (15 integration tests skipped without DB connection).

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>